22.2 Метод of